Fix image alignment

--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,16 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 640px) {
+    figure{
+        height: unset;
+    }
+    
+    
+    
+    figure img{
+        height: unset;
+        width: unset;
+    }
     #typed {
         font-size: 1em;
         text-align: center;
